--- a/modulo5/case1/package.json
+++ b/modulo5/case1/package.json
@@ -13,6 +13,7 @@
     "@adminjs/sequelize": "^2.1.5",
     "@adminjs/upload": "^2.0.2",
     "adminjs": "^5.5.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
