--- a/modulo5/case1/package.json
+++ b/modulo5/case1/package.json
@@ -23,6 +23,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.45",
     "sequelize-cli": "^6.4.1",
