--- a/modulo5/Case1/package.json
+++ b/modulo5/Case1/package.json
@@ -1,29 +1,36 @@
 {
   "name": "case1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/server.ts"
   },
-  "author": "",
+  "author": "tacio",
   "license": "ISC",
   "dependencies": {
-    "@adminjs/express": "~4.0.1",
-    "@adminjs/sequelize": "~2.1.0",
-    "@adminjs/upload": "~2.0.1",
+    "@adminjs/express": "^4.0.3",
+    "@adminjs/sequelize": "^2.1.5",
+    "@adminjs/upload": "^2.0.2",
     "adminjs": "^6.0.1",
-    "express": "^4.17.2",
-    "express-formidable": "~1.2.0",
-    "pg": "~8.7.1",
-    "sequelize": "~6.13.0"
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "~8.5.1",
+    "pg": "^8.7.3",
+    "postgresql": "0.0.1",
+    "sequelize": "^6.13.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/express": "~4.17.13",
-    "@types/node": "~17.0.10",
-    "sequelize-cli": "~6.4.1",
-    "ts-node-dev": "~1.1.8",
-    "typescript": "~4.5.4"
-  }
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.45",
+    "sequelize-cli": "^6.4.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
+  },
+  "description": ""
 }
